src/test/ui/proc-macro/expand-to-unstable-2.stderr
error[E0658]: The attribute `rustc_foo` is currently unknown to the compiler and may have meaning added to it in the future
  --> $DIR/expand-to-unstable-2.rs:6:10
   |
LL | #[derive(Unstable)]
   |          ^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/29642
   = help: add #![feature(custom_attribute)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
